# pyCelestia

./: .gitignore  build-wheels.sh  pyproject.toml
.github/workflows/: python-publish.yml
celestia/: __init__.py  _celestia.py  models.py  rpc.py  utils.py
tests/: test_client.py  test_models.py
